--- a/charts/argo-cd/templates/argocd-server/gke/backendconfig.yaml
+++ b/charts/argo-cd/templates/argocd-server/gke/backendconfig.yaml
@@ -1,10 +1,12 @@
-{{- if .Values.server.gke.frontendConfig.enabled }}
-apiVersion: networking.gke.io/v1beta1
-kind: FrontendConfig
+{{- if .Values.server.gke.backendConfig.enabled }}
+apiVersion: cloud.google.com/v1beta1
+kind: BackendConfig
 metadata:
   name: {{ include "argo-cd.server.fullname" . }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.server.name "name" .Values.server.name) | nindent 4 }}
+{{- with omit .Values.server.gke.backendConfig.spec }}
 spec:
-  {{- toYaml .Values.server.gke.frontendConfig.spec | nindent 2 }}
+  {{- toYaml . | nindent 2 }}
+{{- end }}
 {{- end }}
