--- a/charts/argo-cd/templates/argocd-application-controller/poddisruptionbudget.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/poddisruptionbudget.yaml
@@ -2,15 +2,17 @@
 apiVersion: {{ include "argo-cd.apiVersion.podDisruptionBudget" . }}
 kind: PodDisruptionBudget
 metadata:
-  name: {{ template "argo-cd.controller.fullname" . }}
+  name: {{ include "argo-cd.controller.fullname" . }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.controller.name "name" .Values.controller.name) | nindent 4 }}
-  {{- with .Values.controller.pdb.labels }}
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+    {{- with .Values.controller.pdb.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
   {{- with .Values.controller.pdb.annotations }}
   annotations:
-    {{- toYaml . | nindent 4 }}
+    {{- range $key, $value := . }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
   {{- end }}
 spec:
   {{- if .Values.controller.pdb.minAvailable }}
