--- a/charts/argo-cd/templates/argocd-repo-server/poddisruptionbudget.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/poddisruptionbudget.yaml
@@ -5,12 +5,14 @@ metadata:
   name: {{ template "argo-cd.repoServer.fullname" . }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.repoServer.name "name" .Values.repoServer.name) | nindent 4 }}
-  {{- with .Values.repoServer.pdb.labels }}
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+    {{- with .Values.repoServer.pdb.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
   {{- with .Values.repoServer.pdb.annotations }}
   annotations:
-    {{- toYaml . | nindent 4 }}
+    {{- range $key, $value := . }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
   {{- end }}
 spec:
   {{- if .Values.repoServer.pdb.minAvailable }}
